# feed2json

./: README.md  feed2json.py  pyproject.toml
.github/: FUNDING.yml
